# cpu_swe_benchmark

./: .gitignore  README.md  benchmark_latency.py  pyproject.toml
repo_templates/algorithm_lab/: README.md  pyproject.toml
repo_templates/algorithm_lab/src/algorithm_lab/: __init__.py  sorting.py
repo_templates/algorithm_lab/tests/: test_sorting.py
repo_templates/memory_lab/: README.md  pyproject.toml
repo_templates/memory_lab/src/memory_lab/: __init__.py  (+1 more)
repo_templates/memory_lab/tests/: test_bandwidth.py
scripts/: run_sorting_quick.sh  start_dashboard.sh  start_vllm_tp8_qwen32b.sh
skills/cpu-swe-agentic-benchmark/: SKILL.md
skills/cpu-swe-agentic-benchmark/references/: benchmark-standard.md  metrics.md  operations.md  troubleshooting.md  workloads.md
skills/cpu-swe-agentic-benchmark/scripts/: check_benchmark_services.sh  run_benchmark_sweep.sh  summarize_benchmark.py
src/cpu_swe_benchmark/: __init__.py  aggregate.py  amd_pcm.py  business_metrics.py  cli.py  dashboard.py  dcgm_sampler.py  instrumented_environment.py  repo_workloads.py  runner.py  schemas.py  system_history.py  system_metrics.py  system_sampler.py  validation.py  vllm_text_model.py  worker.py  workloads.py
tests/: test_aggregate.py  test_amd_pcm.py  test_benchmark_latency_entrypoint.py  test_cli.py  test_dashboard_app.py  test_dashboard_metrics.py  test_dcgm_sampler.py  test_instrumented_environment.py  test_repo_workloads.py  test_routing.py  test_scripts.py  test_system_history.py  test_system_sampler.py  test_validation.py  test_vllm_text_model.py  test_worker.py  test_workloads.py
